--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -116,3 +116,12 @@ h1 {
     margin-bottom: 2rem;
   }
 }
+p{
+  font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
+  font-size: 1.3em;
+  font-stretch: semi-expanded;
+  text-align: justify;
+  letter-spacing: 1px;
+  padding-top: 2em;
+  line-height: 2rem;
+}
