--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: rgb(148, 10, 10);
+  --primary: rgb(81, 199, 107);
 }
 
 .btn {
@@ -17,7 +17,9 @@
 }
 
 .btn--outline {
-  background-color: transparent;
+  background-color: solid;
+  background-color: var(--primary);
+  border-radius: 4px 4px 4px 4px;
   color: #fff;
   padding: 8px 20px;
   border: 1px solid var(--primary);
