--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-  background-color: #c7c7c9;
+  background: linear-gradient(135deg,  #010129dc 0%, rgb(32, 19, 148) 100%);
   padding: 4rem 0 2rem 0;
   display: flex;
   flex-direction: column;
