--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background: linear-gradient(90deg, rgb(59, 59, 59) 0%, rgb(88, 87, 87) 100%);
+  background: linear-gradient(90deg,  #010129dc 0%, rgb(32, 19, 148) 100%);
   height: 60px;
   display: flex;
   justify-content: center;
