--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,11 +1,12 @@
 .navbar {
-  background: linear-gradient(90deg,  #010129dc 0%, rgb(32, 19, 148) 100%);
+  background: linear-gradient(90deg,  #2d2dda 0%, rgb(32, 19, 148) 50%);
   height: 60px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 999;
 }
@@ -84,19 +85,19 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     position: absolute;
-    top: 80px;
+    top: 60px;
     left: -100%;
     opacity: 1;
-    transition: all 0.5s ease;
+    transition: all 0.2s ease;
   }
 
   .nav-menu.active {
     background: #242222;
     left: 0;
     opacity: 1;
-    transition: all 0.5s ease;
+    transition: all 0.2s ease;
     z-index: 1;
   }
 
