--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,11 +1,13 @@
-video {
+.hero-container > img, video{
   object-fit: cover;
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: -1;
 }
-
+h1{
+  text-align: center;
+}
 .hero-container {
   /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
   height: 100vh;
