--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,11 +11,14 @@
 }
 
 .navbar-container {
+  background: linear-gradient(90deg, rgb(59, 59, 59) 0%, rgb(88, 87, 87) 100%);
+  height: 60px;
   display: flex;
+  padding: 0;
+  width: 100%;
   justify-content: center;
   align-items: center;
-  height: 80px;
-  max-width: 1500px;
+  position: fixed;
 }
 
 .navbar-logo {
