--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,11 +1,10 @@
-video {
+.hero-container > img, video{
   object-fit: cover;
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: -1;
 }
-
 .hero-container {
   /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
   height: 100vh;
@@ -22,14 +21,7 @@ video {
   color: rgb(252, 249, 249);
   font-size: 100px;
   margin-top: -100px;
-}
-
-.hero-container > p {
-  margin-top: 8px;
-  color: #fff;
-  font-size: 32px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  text-align: center;
 }
 
 .hero-btns {
@@ -55,10 +47,6 @@ video {
   .hero-container > h1 {
     font-size: 50px;
     margin-top: -100px;
-  }
-
-  .hero-container > p {
-    font-size: 30px;
   }
 
   .btn-mobile {
