--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -12,7 +12,7 @@
 
 .navbar-container {
   background: linear-gradient(90deg, rgb(59, 59, 59) 0%, rgb(88, 87, 87) 100%);
-  height: 60px;
+  height: 0;
   display: flex;
   padding: 0;
   width: 100%;
@@ -157,5 +157,11 @@
     background: #fff;
     color: #242424;
     transition: 250ms;
+  }
+  .navbar{
+    height: 0;
+  }
+  .navbar-container{
+    position: static;
   }
 }
