--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -12,7 +12,7 @@
 
 .navbar-container {
   background: linear-gradient(90deg, rgb(59, 59, 59) 0%, rgb(88, 87, 87) 100%);
-  height: 0;
+  height: 60px;
   display: flex;
   padding: 0;
   width: 100%;
@@ -77,17 +77,23 @@
 .menu-icon {
   display: none;
 }
-
+.conclusions{
+  display: none;
+  position: absolute;
+}
 @media screen and (max-width: 960px) {
   .NavbarItems {
     position: relative;
   }
-
+  .conclusions{
+    display: list-item;
+    position: sticky;
+  }
   .nav-menu {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     position: absolute;
     top: 80px;
     left: -100%;
@@ -158,7 +164,7 @@
     color: #242424;
     transition: 250ms;
   }
-  .navbar{
+  .navbar, .navbar-container{
     height: 0;
   }
   .navbar-container{
